STEP 5/OPA Usecases/Encrypted Storage Class/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sEncrypted
metadata:
  name: required-encrypted-storageclass
spec:
  match:
    kinds:
      - apiGroups: ["storage.k8s.io"]
        kinds: ["StorageClass"]
